fix lg screen main/tiles content spacing on ie

--- a/src/styles/components/mm/components/_college.scss
+++ b/src/styles/components/mm/components/_college.scss
@@ -1,6 +1,7 @@
 .college {
   &__main {
-    flex: 0 0 32%;
+    flex: 0 0 auto;
+    width: 32%;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
